[SWDEV-138]Left Mail to do
